# RSATU-Labs

./: .gitignore  README.md
Algorithms and data structures/Finy - The Board Game/: Board.hpp  Consts.hpp  ReactiveRectangle.hpp  WinnerBoard.hpp  advice.txt  board-main.cpp
Algorithms and data structures/lab2 descriptor/: descriptor.cpp
Algorithms and data structures/lab3 mathematicians/: main  main.cpp
Algorithms and data structures/lab4 RPN/: RPN-1-to-file-fixed.cpp  RPN-1-to-file.cpp  RPN-2-from-file-fixed.cpp  RPN-2-from-file.cpp  output.txt  readme.md  tests.txt
Algorithms and data structures/lab5 graph/: graph.cpp  task 5.txt
Computing systems architecture/: converter.hpp  mlab.cpp  mlabs  run.hpp
Computing systems architecture/lab1/: converter.hpp  michailov lab 1.txt
Computing systems architecture/lab2/: converter.hpp  mlab2.cpp  run.hpp
Computing systems architecture/lab3/: converter.hpp  mlab3.cpp  run.hpp  task 3.txt
Computing systems architecture/lab4/: converter.hpp  mlab 4 var 3.cpp  task4.txt
Data processing structures and algorithms/lab 1. QuickPow/: main.cpp
Methods for analyzing the computatuional complexity of algorithms/lab1 dp - longest subsequence/: input.txt  main.cpp  task.txt
Object Oriented Programming/lab 1/: main  (+4 more)
Object Oriented Programming/lab 1 student/: Human.hpp
Operating systems/: lab4 tz.txt  lab5.cpp  lab6 sender 2.cpp  lab6 server 3.py  task6 tz.txt
semester-4/: main.cpp
semester-4/Object oriented programming/lab 2. lists/: CMakeLists.txt  Makefile  MyQtApp  MyQtApp.pro  designer.ui  main.cpp  ui_designer.h
(+165 files in other folders)
